--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
     url: jdbc:mysql:///goods?characterEncoding=utf-8&serverTimezone=UTC
     username: root
     password: 123456
+  jpa:
+    show-sql: true
